# multipong

./: .env.example  .gitignore  ARCHITECTURE_SUMMARY.md  COPILOT_INSTRUCTIONS.md  CO_PILOT_GUIDE.md  CO_PILOT_GUIDE_ADVANCED.md  ENGINE_SKELETON_SUMMARY.md  MENU_LOBBY_TEST.md  PHASE3_SUMMARY.md  PROJECT_STRUCTURE.py  QUICKSTART.md  README.md  SETUP_README.md  config.json  create_modules.py  create_structure.py  demo_engine.py  demo_phase3.py  pyproject.toml  requirements.txt  setup_project.ps1  setup_project.sh  setup_structure.ps1  setup_structure_simple.ps1  start_server.bat  start_server.ps1
api/: __init__.py  crud.py  db.py  main.py  models.py  schemas.py
api/routers/: __init__.py  matches.py  players.py  stats.py
docs/: 00_overview.md  01_architecture_plan.md  02_phase1_pygame_basics.md  03_phase2_engine_oop.md  04_phase3_multipong_logic.md  05_phase4_asyncio_websockets_server.md  06_phase5_client_sync.md  07_phase6_settings_and_config.md  08_phase7_database.md  09_phase8_fastapi_stats.md  10_phase9_frontends.md  11_phase10_ai_bots.md  12_phase11_rl_training_notebook.md  13_phase12_menu_and_lobby.md  14_phase13_tournament_mode.md  15_phase14_packaging_and_deployment.md  GAME_LOOP_API.md  PHASE4_CHALLENGES.md  PHASE4_IMPLEMENTATION.md  PHASE5_CLIENT.md  README_CHALLENGES.md  README_WSCLIENT.md  WEBSOCKET_MANAGER_API.md  hraci-pole.cpt
frontend/: index.html
multipong/: __init__.py  main_client.py  settings.py
multipong/ai/: __init__.py  base_ai.py  helpers.py  rl_env.py  (+5 more)
notebooks/: rl_training_multipong.ipynb  rl_ui_settings.json
scripts/: ws_smoke_test.py
(+54 files in other folders)
